# rag-functional-analysis

./: .gitignore  README.md  pyproject.toml  rag_pipeline.py
data/: lecture_notes_discrete_analysis.txt  lecture_notes_functional_analysis.txt  peter_pan.txt.txt
notebooks/: rag-kaggle.ipynb  rag-results.ipynb
rag_fa/: embedding_operations.py
utils/: file_operations.py  subprocess_runner.py
