[tool.poetry]
name = "rag-fa"
version = "0.1.0"
description = "Homework for the LLM course at MIPT, RAG of Ollama model on the functional analysis tickets"
authors = ["Vladimir Smirnov <voff.smirnoff@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.24"
pandas = "^2.2.3"
matplotlib = "^3.8.3"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch_cpu"}
torchaudio = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
scikit-image = "^0.24.0"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
pre-commit = "^2.10.1"

[tool.black]
line-length = 90
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
lines_after_imports = 2

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "90"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"